--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "heroku": {
+            "php-config": []
         }
     },
     "config": {
